F-curves modifiers in nodes doesn't updates properly #65802

Closed
opened 2019-06-14 11:17:17 +02:00 by Michael Soluyanov · 8 comments

System Information
Operating system: Linux-4.15.0-51-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-12 18:00, hash: 2404220e80

Short description of error
F-curves modifiers in nodes doesn't updates properly

Exact steps for others to reproduce the error

  1. In shader editor add a keyframe for one of nodes.
  2. In graph editor add Generator modifier
  3. Change modifier properties.
  4. Play animation
    Result:
    Node will show that value changes like you didn't edit Generator modifier
  5. click and unclick "additive" option
    Result:
    Now works as expected

2019-06-14 12-07-02.mp4

**System Information** Operating system: Linux-4.15.0-51-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-12 18:00, hash: `2404220e80` **Short description of error** F-curves modifiers in nodes doesn't updates properly **Exact steps for others to reproduce the error** 1. In shader editor add a keyframe for one of nodes. 2. In graph editor add Generator modifier 3. Change modifier properties. 4. Play animation Result: Node will show that value changes like you didn't edit Generator modifier 5. click and unclick "additive" option Result: Now works as expected [2019-06-14 12-07-02.mp4](https://archive.blender.org/developer/F7102625/2019-06-14_12-07-02.mp4)
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Is this still an issue with the latest beta? I get the same result with and without additive.

Is this still an issue with the latest beta? I get the same result with and without additive.
Author
Member

In #65802#703324, @ZedDB wrote:
Is this still an issue with the latest beta? I get the same result with and without additive.

Yes, all the same in
version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-16 18:29, hash: 40a8c49088

The issue is that F-curves modifiers in nodes doesn't updates properly. When I press "Additive", it updates, and of course, result with and without additive will be the same if keyframe is in zero position.

Peek 2019-06-19 19-58.gif

> In #65802#703324, @ZedDB wrote: > Is this still an issue with the latest beta? I get the same result with and without additive. Yes, all the same in version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-16 18:29, hash: `40a8c49088` The issue is that F-curves modifiers in nodes doesn't updates properly. When I press "Additive", it updates, and of course, result with and without additive will be the same if keyframe is in zero position. ![Peek 2019-06-19 19-58.gif](https://archive.blender.org/developer/F7273859/Peek_2019-06-19_19-58.gif)
Sebastian Parborg self-assigned this 2019-06-20 17:34:01 +02:00

I've posted a possible solution here: D5101

I've posted a possible solution here: [D5101](https://archive.blender.org/developer/D5101)

This issue was referenced by 9a88bd5590

This issue was referenced by 9a88bd55903a5c7df0365007bef8dd182f6eb481

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

maybe it's related: https://developer.blender.org/T65272 ?

maybe it's related: https://developer.blender.org/T65272 ?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65802
No description provided.